src/main/webapp/css/esup-stock.css
/* ... */
.esupstock .detailsImage {
	width: 200px;
	height: auto;
}

.esupstock #detail-download {
	background-image: url(/esup-filemanager/img/download_24px.gif);
	background-position: left center;
	background-repeat: no-repeat;
	padding:2px 0px 2px 37px;
	color: #555555;
	font-weight: bold;
	cursor: pointer;
}

.esupstock #detail-view-image {
	background-image: url(/esup-filemanager/img/picture-8.png);
	background-position: left center;
	background-repeat: no-repeat;
	padding:4px 0px 4px 37px;
	color: #555555;
	font-weight: bold;
	cursor: pointer;
	display: none;
}

.esupstock #detail-view-images {
	background-image: url(/esup-filemanager/img/picture-8.png);
	background-position: left center;
	background-repeat: no-repeat;
	padding:4px 0px 4px 37px;
	color: #555555;
	font-weight: bold;
	cursor: pointer;
}

.esupstock #detail-zip-download {
	background-image: url(/esup-filemanager/img/package-x-generic.png);
	background-position: left center;
	background-repeat: no-repeat;
	padding:4px 0px 4px 37px;
	color: #555555;
	font-weight: bold;
	cursor: pointer;
}

.esupstock .thumbnail {
	float: left;
	width: 148px;
	height: 96px;
	padding: 0px;
	margin: 0px;
}

.esupstock .inner_thumbnail {
	position: relative;
	display: block;
    width: 130px;
    height: 88px;
    padding: 0px;
	margin: 0px;
	left: 12px;
	top: 12px;
	border: 1px solid #D4D4D4;
}

.esupstock .thumbnail .inner_thumbnail > a {
	position: absolute;
	margin: none;
	display: inline-block;
	width: 100%;
	height: 100%;
	overflow: hidden;
}

.esupstock .thumbnail a img {
	margin-top: 16px;
    margin-left: auto;
    margin-right: auto;
    display: block;
    width: 32px;
    height: 32px;
}

.esupstock .thumbnail span.renameSpan {
	position: absolute;
	top: 48px;
	width: 100%;
}

.esupstock .thumbnail span.renameSpan input {
	width: 100%;
	display: inline-block;
}

.esupstock #newFileOrFolderInput {
	width: 100%;
	display: inline-block;
}

.esupstock .thumbnail .thumbnailLinkText {
	width: 100%;
	display: inline-block;
	height: 32px;
	text-align: center;
	text-wrap: unrestricted;
	word-wrap: break-word;
}

/* RlM6 = FS: coding in Base64 ... */
.esupstock #path_RlM6 > ins, .esupstock #path_RlM6 > a {
    display: none;
}


/* Hack for uPortal 2.x */
#portal-page-body .esupstock .container #fileTree ul {
margin: 0px 5px 0px 0px;
padding: 0px 0px 0px 15px;
}

/* bug JSTree :
http://code.google.com/p/jstree/issues/detail?id=922&q=IE%20expand&colspec=ID%20Type%20Status%20Priority%20Owner%20Summary
*/
/*.esupstock li.jstree-closed ul {display:none;}*/

.esupstock .selectable {
	outline : none;
}

.esupstock .selectable a {
    text-decoration: none;
}

